--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.8'
 services:
   app:
     build: .
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
+      - ./app:/app/app  
+      - ./requirements.txt:/app/requirements.txt
     environment:
-      - DATABASE_URL=sqlite:///./test.db
+      - DATABASE_URL=sqlite:////app/test.db
+      - PYTHONPATH=/app
     command: uvicorn app.main:app --host 0.0.0.0 --reload
